Update dependency versions and wait for fonts to load before generating pdf